# advent_of_code

./: Cargo.toml
src/: lib.rs  main.rs  setup.py
src/aoc21/day01/: mod.rs
src/aoc21/day02/: mod.rs
src/aoc21/day03/: mod.rs
src/aoc21/day04/: mod.rs
src/aoc21/day05/: mod.rs
src/aoc21/day06/: mod.rs
src/aoc21/day07/: mod.rs
src/aoc21/day08/: mod.rs
src/aoc21/day09/: mod.rs
src/aoc21/day10/: mod.rs
src/aoc21/day11/: mod.rs
src/aoc21/day12/: mod.rs
src/aoc21/day13/: mod.rs
src/aoc21/day14/: mod.rs
src/aoc21/day15/: mod.rs
src/aoc21/day16/: mod.rs
src/aoc21/day17/: mod.rs
src/aoc21/day18/: mod.rs
src/aoc22/day01/: mod.rs
src/aoc22/day02/: mod.rs
src/aoc22/day03/: mod.rs
src/aoc22/day04/: mod.rs
src/aoc22/day05/: input.txt  mod.rs  sample_input.txt
src/aoc22/day06/: mod.rs
src/aoc22/day07/: mod.rs
src/aoc22/day08/: mod.rs
src/aoc22/day09/: mod.rs
