[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
itertools = "0.10.1"
regex = "1"
multiset = "0.0.5"
to-binary = "0.4.0"
clap = { version = "4.0", features = ["derive"] }
